# RT-Object-Detection-Tracking

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark.py
configs/: default.yaml
cpp/opencv_pipeline/: CMakeLists.txt
cpp/opencv_pipeline/include/: frame_reader.hpp  onnx_inference.hpp  preprocessor.hpp
cpp/opencv_pipeline/src/: frame_reader.cpp  main.cpp  onnx_inference.cpp  preprocessor.cpp
notebooks/: demo.ipynb
scripts/: export_onnx.py  run_pipeline.py
src/: __init__.py
src/detection/: __init__.py  exporter.py  onnx_detector.py  yolo_detector.py
src/features/: __init__.py  optical_flow.py  orb_extractor.py  sift_extractor.py
src/filters/: __init__.py  kalman_filter.py
src/pipeline/: __init__.py  hybrid_pipeline.py  pipeline_config.py
src/tracking/: __init__.py  association.py  deep_sort_tracker.py  mot_metrics.py  reid_embedder.py  sort_tracker.py  track.py
src/utils/: __init__.py  config.py  logger.py  threaded_capture.py  timer.py  visualization.py
tests/: test_features.py  test_kalman.py  test_mot_metrics.py  test_pipeline_config.py  test_tracking.py  test_utils.py
