[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-object-detection-tracking"
version = "1.0.0"
description = "Real-Time Object Detection & Tracking System — YOLOv8 + SORT/DeepSORT hybrid pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RT Pipeline Team"},
]
keywords = ["object-detection", "tracking", "yolov8", "sort", "deepsort", "kalman-filter", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
rt-pipeline = "scripts.run_pipeline:main"
rt-export = "scripts.export_onnx:main"
rt-benchmark = "benchmarks.benchmark:main"

[project.urls]
Homepage = "https://github.com/user/RT-Object-Detection-Tracking"
Repository = "https://github.com/user/RT-Object-Detection-Tracking"
Issues = "https://github.com/user/RT-Object-Detection-Tracking/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
